[gd_scene load_steps=13 format=3 uid="uid://dkie3md1cmsip"]

[ext_resource type="Theme" uid="uid://leudtt5jh16a" path="res://COGITO/Theme/Cogito_Theme_A.tres" id="1_1djt0"]
[ext_resource type="Script" path="res://COGITO/EasyMenus/Scripts/tab_menu_controller.gd" id="2_473pa"]
[ext_resource type="AudioStream" uid="uid://cr3bcp0u6w1pl" path="res://COGITO/Assets/Audio/Kenney/UiAudio/mouseclick1.ogg" id="3_cekij"]
[ext_resource type="AudioStream" uid="uid://kbw2s407quul" path="res://COGITO/Assets/Audio/Kenney/UiAudio/click1.ogg" id="4_ccwo8"]
[ext_resource type="FontFile" uid="uid://bfavdpnmorag5" path="res://COGITO/Assets/Fonts/Montserrat/Montserrat-Regular.ttf" id="5_7fnwn"]
[ext_resource type="Script" path="res://COGITO/EasyMenus/Scripts/tab_menu_options.gd" id="5_d44ip"]
[ext_resource type="Script" path="res://COGITO/Theme/CogitoButton.gd" id="6_a8sll"]
[ext_resource type="Script" path="res://COGITO/EasyMenus/Scripts/follow_focus_center.gd" id="7_2vb7n"]
[ext_resource type="Script" path="res://COGITO/EasyMenus/Scripts/option_button_input_propagator.gd" id="9_acc2n"]
[ext_resource type="PackedScene" uid="uid://cqniig2ks0xs2" path="res://COGITO/EasyMenus/Nodes/gamepad_closable.tscn" id="10_op1sx"]
[ext_resource type="PackedScene" uid="uid://dyfwp0vhgfjd7" path="res://COGITO/EasyMenus/Nodes/slider_w_labels.tscn" id="11_u1tdl"]
[ext_resource type="Script" path="res://COGITO/Scripts/menu_scene_switcher.gd" id="12_4c47n"]

[node name="TabMenu" type="Control" node_paths=PackedStringArray("nodes_to_focus")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1djt0")
script = ExtResource("2_473pa")
nodes_to_focus = [NodePath("Content/TabContainer/Game/VBoxContainer/ResumeGameButton"), NodePath("Content/TabContainer/Gameplay/ScrollContainer/VBoxContainer/InvertYAxisCheckButton"), NodePath("Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/FullscreenCheckButton"), NodePath("Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider"), null]
sound_hover = ExtResource("3_cekij")
sound_click = ExtResource("4_ccwo8")

[node name="TabMenuOptions" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_d44ip")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PauseMenuLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Pause Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Content"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_7fnwn")

[node name="Game" type="MarginContainer" parent="Content/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Game"]
layout_mode = 2
size_flags_horizontal = 4

[node name="GameTitle" type="Label" parent="Content/TabContainer/Game/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Game"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/TabContainer/Game/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="ResumeGameButton" type="Button" parent="Content/TabContainer/Game/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Resume"
script = ExtResource("6_a8sll")

[node name="SaveButton" type="Button" parent="Content/TabContainer/Game/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Save"
script = ExtResource("6_a8sll")

[node name="LoadButton" type="Button" parent="Content/TabContainer/Game/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Load"
script = ExtResource("6_a8sll")

[node name="BackToMenuButton" type="Button" parent="Content/TabContainer/Game/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Back to Main Menu"
script = ExtResource("6_a8sll")

[node name="QuitButton" type="Button" parent="Content/TabContainer/Game/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Quit"
script = ExtResource("6_a8sll")

[node name="Gameplay" type="MarginContainer" parent="Content/TabContainer"]
visible = false
layout_mode = 2
focus_neighbor_bottom = NodePath("ScrollContainer/VBoxContainer/InvertYAxisCheckButton")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="Content/TabContainer/Gameplay"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("7_2vb7n")
transition_time = 0.15

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Gameplay/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="GameplayTitle" type="Label" parent="Content/TabContainer/Gameplay/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Gameplay"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/TabContainer/Gameplay/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="InvertYAxisCheckButton" type="CheckButton" parent="Content/TabContainer/Gameplay/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Inverts looking up and down direction."
theme_override_font_sizes/font_size = 25
text = "Invert Y Axis"

[node name="ApplyChanges" type="Button" parent="Content/TabContainer/Gameplay/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Apply changes"
script = ExtResource("6_a8sll")

[node name="Graphics" type="MarginContainer" parent="Content/TabContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_neighbor_bottom = NodePath("ScrollContainer/VBoxContainer/FullscreenCheckButton")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="Content/TabContainer/Graphics"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("7_2vb7n")
transition_time = 0.15

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Graphics/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="OptionsTitle" type="Label" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="FullscreenCheckButton" type="CheckButton" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Fullscreen"

[node name="VSyncCheckButton" type="CheckButton" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Syncs Games Frame Rate with Displays Refresh Rate"
theme_override_font_sizes/font_size = 25
text = "V-Sync"

[node name="MarginContainer2" type="MarginContainer" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
tooltip_text = "Scale Less than 1 to get performance improve. 
Scale to more than 1 to improve image quality."

[node name="RenderScaleLabel" type="Label" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Render Scale"
horizontal_alignment = 1

[node name="RenderScaleSlider" type="HSlider" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_force_pass_scroll_events = false
min_value = 0.25
max_value = 2.0
step = 0.05
value = 1.0

[node name="RenderScaleCurrentValueLabel" type="Label" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "1"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AntiAliasing2DLabel" type="Label" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "2D Anti Aliasing"
horizontal_alignment = 1

[node name="AntiAliasing2DOptionButton" type="OptionButton" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Smooth out edges of 2D objects"
item_count = 4
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3
script = ExtResource("9_acc2n")

[node name="GamepadClosable" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing2DOptionButton" instance=ExtResource("10_op1sx")]

[node name="AntiAliasing3DLabel" type="Label" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "3D Anti Aliasing"
horizontal_alignment = 1

[node name="AntiAliasing3DOptionButton" type="OptionButton" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Smooths out edges of 3D objects"
item_count = 4
selected = 0
popup/item_0/text = "Off"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3
script = ExtResource("9_acc2n")

[node name="GamepadClosable" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing3DOptionButton" instance=ExtResource("10_op1sx")]

[node name="ApplyChanges" type="Button" parent="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Apply changes"
script = ExtResource("6_a8sll")

[node name="Audio" type="MarginContainer" parent="Content/TabContainer"]
visible = false
layout_mode = 2
focus_neighbor_bottom = NodePath("ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="Content/TabContainer/Audio"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("7_2vb7n")
transition_time = 0.15

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Audio/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="AudioTitle" type="Label" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Audio"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="SFXVolumeSlider" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("11_u1tdl")]
unique_name_in_owner = true
layout_mode = 2
title = "SFX Volume"

[node name="Title" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" index="0"]
text = "SFX Volume"

[node name="HSlider" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" index="1"]
max_value = 1.0
step = 0.1

[node name="MusicVolumeSlider" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer" instance=ExtResource("11_u1tdl")]
unique_name_in_owner = true
layout_mode = 2
title = "Music Volume"

[node name="Title" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" index="0"]
text = "Music Volume"

[node name="HSlider" parent="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" index="1"]
max_value = 1.0
step = 0.1

[node name="Bindings" type="MarginContainer" parent="Content/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="ScrollContainer" type="ScrollContainer" parent="Content/TabContainer/Bindings"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("7_2vb7n")
transition_time = 0.15

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Bindings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="BindingsTitle" type="Label" parent="Content/TabContainer/Bindings/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Coming soon"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content/TabContainer/Bindings/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="Content/TabContainer/Bindings/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Content/TabContainer/Bindings/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MenuSceneSwitcher" type="Node" parent="."]
script = ExtResource("12_4c47n")
main_menu_scene = "res://COGITO/DemoScenes/COGITO_MainMenu.tscn"
start_game_scene = "res://COGITO/DemoScenes/COGITO_01_Demo.tscn"

[connection signal="back_to_main_pressed" from="." to="MenuSceneSwitcher" method="_on_pause_menu_back_to_main_pressed"]
[connection signal="pressed" from="Content/TabContainer/Game/VBoxContainer/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="Content/TabContainer/Game/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Content/TabContainer/Game/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Content/TabContainer/Game/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="Content/TabContainer/Game/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Content/TabContainer/Gameplay/ScrollContainer/VBoxContainer/ApplyChanges" to="TabMenuOptions" method="_on_apply_changes_pressed"]
[connection signal="toggled" from="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/FullscreenCheckButton" to="Content/TabContainer/Graphics" method="_on_fullscreen_check_button_toggled"]
[connection signal="toggled" from="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/VSyncCheckButton" to="Content/TabContainer/Graphics" method="_on_v_sync_check_button_toggled"]
[connection signal="value_changed" from="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer2/VBoxContainer/RenderScaleSlider" to="Content/TabContainer/Graphics" method="_on_render_scale_slider_value_changed"]
[connection signal="item_selected" from="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing2DOptionButton" to="Content/TabContainer/Graphics" method="_on_anti_aliasing_2d_option_button_item_selected"]
[connection signal="item_selected" from="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/MarginContainer3/VBoxContainer/AntiAliasing3DOptionButton" to="Content/TabContainer/Graphics" method="_on_anti_aliasing_3d_option_button_item_selected"]
[connection signal="pressed" from="Content/TabContainer/Graphics/ScrollContainer/VBoxContainer/ApplyChanges" to="TabMenuOptions" method="_on_apply_changes_pressed"]
[connection signal="value_changed" from="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider" to="TabMenuOptions" method="_on_sfx_volume_slider_value_changed"]
[connection signal="value_changed" from="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider" to="TabMenuOptions" method="_on_music_volume_slider_value_changed"]

[editable path="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/SFXVolumeSlider"]
[editable path="Content/TabContainer/Audio/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/MusicVolumeSlider"]
